fixed about page image spacing

--- a/src/About.css
+++ b/src/About.css
@@ -15,6 +15,11 @@
 	padding-right: 40px;
 }
 
+.about-img {
+	max-width: 100%;
+	height: 500px;
+}
+
 .paragraph-container {
 	padding-left: 30px;
 	display: flex;
